src/objects/LeanData__Round_Robin_Schedule_Setting__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Template__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Schedule_Data__c</fullName>
        <label>Working Hours</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Timezone__c</fullName>
        <label>Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Vacation_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacation User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User</relationshipLabel>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Round Robin Schedule Setting</label>
    <nameField>
        <label>Round Robin Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Schedule Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>